UPDATE schema & validator to include ANY enum
